# analiza-danych-eksperymentalnych-pwr-2021

./: analiza.py  lab1.py  lab2.py  lab3.py  lab4.py  lab4_models.py  lab4_res  lab4_res_noise  pyproject.toml  todo.md
data2/: d.csv
export_lab2/: data1.json  data1.xml  data1.xslx  data2.json  data2.xml  data2.xslx  data3.json  data3.xml  data3.xslx  data4.json  data4.xml  data4.xslx
results/: res_1.txt  res_2.txt  res_3.txt  res_4.txt
tests/: test_pwr.py
