[tool.poetry]
name = "pwr"
version = "0.1.0"
description = ""
authors = ["Jakub Ciszek <jakub@ratingcaptain.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.2"
seaborn = "^0.11.2"
pandas = "^1.3.3"
scikit-learn = "^1.0"
tqdm = "^4.62.3"
lxml = "^4.6.3"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
